# eeg_harmonization

./: .gitattributes  .gitignore  Aplicacion_ICA_componentes.py  Conectividad_EP.py  DataAnalysis.py  MANIFEST.in  README.md  analysis.py  aws-cli.txt  conversion_bids.py  datasets.py  events.py  installation.sh  longitudinal_data_rois_avengers.xlsx  open_edf.py  preprocesamiento.py  preprocessingEEG.py  processingEEG.py  query_derivatives.py  query_derivatives_icpowers.py  query_derivatives_powers.py  readme.txt  reglasLEMON.yml  reinstall.sh  remove.py  requirements-install.txt  requirements.txt  save.py  setup.cfg  setup.py  statistics.py  test_preprocessing.py  topo.py
config_params/: config_params_tutorial.py
demographic/: dem_DUQUE.csv  dem_biomarcadores.xlsx
misc/: .Rhistory  09_IRASA_FOOOF.ipynb  Aplicacion_ICA_componentes.py  PSD_Graph.py  Vero MatchIt.R  analysis.py  aws-cli.txt  calculateHuberMean_yj.m  check_stages_prep.ipynb  combat_test.py  conversion_bids.py  convert_imgtopdf.py  datasets.py  download_LEMON_CMI.py  download_SRM.py  download_synapse.py  effectSize.py  extract_bands_plot.py  funtionsHarmonize.py  harmonization_test.py  harmonization_test_complete.py  huber_learn.py  neuroharmonaze - V2.py  neuroharmonaze.py  neuroharmonaze_DCLCTR.py  neuroharmonaze_DTACTR.py  neuroharmonaze_G1CTR.py  neuroharmonaze_G1CTR_Gen.py  neuroharmonaze_G1CTR_roi.py  neuroharmonaze_G1G2.py  neuroharmonaze_G1G2CTR.py  neuroharmonaze_G1G2CTR_1.py  neuroharmonaze_G1G2CTR_2.py  neuroharmonzaze_test_age.py  open_edf.py  paired_tests.py  paired_tests_2.py  pybids_test.py  (+16 more)
(+93 files in other folders)
