[metadata]
name = sovaharmony
url = https://github.com/GRUNECO/eeg-harmonization
author = sovaharmony developers
maintainer = Yorguin Mantilla
maintainer_email = yjmantilla@gmail.com
description = sovaharmony, a harmonization eeg pipeline using the bids standard
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
keywords = EEG eeg bids harmonization
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Programming Language :: Python :: 3
  Intended Audience :: Science/Research
  Development Status :: 3 - Alpha
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
project_urls =
  Source = https://github.com/GRUNECO/eeg-harmonization

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True

[options.packages.find]
exclude =
  misc


[versioneer]
VCS = git
style = pep440
versionfile_source = sovaharmony/_version.py
versionfile_build = sovaharmony/_version.py
tag_prefix = 
parentdir_prefix = 
